--- a/Web.Statu/Views/Home/AnalyzaPrijemcu.cshtml
+++ b/Web.Statu/Views/Home/AnalyzaPrijemcu.cshtml
@@ -71,7 +71,7 @@
     //TODO parallel
     foreach (var item in prijemci.OrderByDescending(o => o.Value[o.Value.CurrentSeasonYear()].CelkemCena).Take(50))
     {
-        coreData.Add(item.Key, Smlouva.Statistics.CachedStatisticsForQuery(HlidacStatu.Lib.Searching.Tools.ModifyQueryAND($"icoprijemce:{item.Key}", $"{Model.Query}")));
+        coreData.Add(item.Key, Smlouva.Statistics.CachedStatisticsForQuery(HlidacStatu.Lib.Searching.Query.ModifyQueryAND($"icoprijemce:{item.Key}", $"{Model.Query}")));
     }
 
     if (prijemci.Count > 50)
@@ -79,7 +79,7 @@
         foreach (var item in prijemci.OrderByDescending(o => o.Value[o.Value.CurrentSeasonYear()].CelkemCena).Skip(50))
         {
 
-            coreData.Add(item.Key, HlidacStatu.Lib.Data.Smlouva.Statistics.CachedStatisticsForQuery(HlidacStatu.Lib.Searching.Tools.ModifyQueryAND($"icoprijemce:{item.Key}", $"{Model.Query}")));
+            coreData.Add(item.Key, HlidacStatu.Lib.Data.Smlouva.Statistics.CachedStatisticsForQuery(HlidacStatu.Lib.Searching.Query.ModifyQueryAND($"icoprijemce:{item.Key}", $"{Model.Query}")));
         }
     }
 
