--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -158,21 +158,11 @@
         </p>
         @if (statistics.CurrentSeasonStatistics().PoOblastech?.Count > 0)
         {
-            var obls = statistics.Summary().PoOblastech.OrderByDescending(m => m.Value.CelkemCena).Select(m =>
-            {
-                if (Enum.TryParse<HlidacStatu.Lib.Data.Smlouva.SClassification.ClassificationsTypes>(m.Key.ToString(), out var res))
-                {
-                    return (HlidacStatu.Lib.Data.Smlouva.SClassification.ClassificationsTypes?)res;
-                }
-                else
-                {
-                    return (HlidacStatu.Lib.Data.Smlouva.SClassification.ClassificationsTypes?)null;
-                }
-            })
-                .Where(m => m.HasValue)
-                .Select(m => m.Value.ToNiceDisplayName());
+            var obls = statistics.CurrentSeasonStatistics().PoOblastech.OrderByDescending(m => m.Value.CelkemCena)
+                .Select(m => $"<b>{((HlidacStatu.Lib.Data.Smlouva.SClassification.ClassificationsTypes?)m.Key).ToNiceDisplayName()}</b> ({HlidacStatu.Util.RenderData.ShortNicePrice(m.Value.CelkemCena)})");
             <p>
-                Smlouvy uzavírá nejčastěji v oblastech @HlidacStatu.Util.RenderData.LimitedList(3, obls,  itemsDelimiter: ", ", lastItemDelimiter:", " ,moreTextPrefix: " a další.")
+                Největší smlouvy v @(currentSeasonYear) byly uzavřeny v oblastech
+                @Html.Raw(HlidacStatu.Util.RenderData.LimitedList(4, obls, itemsDelimiter: ", ", lastItemDelimiter: ", ", moreTextPrefix: " a dalších."))
             </p>
         }
         <a href="/subjekt/RegistrSmluv/@Model.ICO" class="moreinfolink text-uppercase"><strong>Zobrazit podrobnosti o registru smluv</strong></a>
